# cart

./: .gitignore  Justfile  README.md  _types.py  analyse.R  analyse.py  flake.nix  lib.py  main.py  pyproject.toml  scrambler.py  unscrambler.py  vectorise.py
corpus/: grave-sight.json  idioms-only.json
idiom_dict/: README.md  cherrypicked.json
