[project]
name = "cart"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.14.0",
  "sentence-transformers>=5.5.1",
  "torch>=2.11.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.16",
    "scipy-stubs>=1.17.1.5",
]
