[project]
name = "cart"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.14.0",
  "numpy>=2.4.4",
  "sentence-transformers>=5.5.1",
  "spacy>=3.8.14",
  "torch>=2.11.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.39.6",
  "ruff>=0.15.16",
  "scipy-stubs>=1.17.1.5",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
